--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 logging.level.root=INFO
 logging.level.org.hibernate.SQL=DEBUG
+database.className=org.postgresql.Driver
+database.url=jdbc:postgresql://localhost:5432/usersDatabase
+database.userName=postgres
+database.password=Diamondpro750
